[gd_scene load_steps=6 format=3 uid="uid://ce6eunvs66mg0"]

[ext_resource type="Script" path="res://assets/entities/clone/clone.gd" id="1_555lc"]
[ext_resource type="PackedScene" uid="uid://dopw00lwshp2t" path="res://models/Soldier/Soldier.blend" id="2_76lb7"]
[ext_resource type="AudioStream" uid="uid://ddtmypxm8w5x2" path="res://assets/entities/clone/speaking.wav" id="3_8shro"]
[ext_resource type="AudioStream" uid="uid://c3xy2hpo25fi8" path="res://assets/entities/clone/alerted.wav" id="4_i05v4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1ebfm"]
radius = 0.4
height = 1.8

[node name="Clone" type="CharacterBody3D" groups=["Clone"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_555lc")

[node name="CollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1ebfm")

[node name="SpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 4.37114e-08, 7.57103e-08, 0, -0.866025, 0.5, 8.74228e-08, 0.5, 0.866025, 0, 1.2, -0.6)
light_color = Color(0.929412, 0, 0, 1)
light_energy = 1.5

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionPolygon3D" parent="DetectionArea"]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 2, 0)
depth = 4.0
polygon = PackedVector2Array(-0.5, 0.5, 20, 10, 20, -10, -0.5, -0.5)

[node name="DetectionRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0, -30)

[node name="Mesh" parent="." instance=ExtResource("2_76lb7")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.85, 0)

[node name="Detected" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.14919, 0)
pixel_size = 0.0075
billboard = 2
modulate = Color(1, 0, 0, 1)
outline_modulate = Color(0.192157, 0, 0, 1)
text = "!"
font_size = 64
outline_size = 18

[node name="Speaking" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_8shro")
bus = &"SFX"

[node name="Saw" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_i05v4")
bus = &"SFX"

[node name="Eyes" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65476, 0)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]

[editable path="Mesh"]
